Обновлены ссылки на Telegram и Instagram

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
   <h2>📞 Связь со мной:</h2>
   <a href="https://wa.me/77714069285" class="btn whatsapp" target="_blank">WhatsApp</a>
   <a href="tel:+77714069285" class="btn call">Позвонить</a>
-  <a href="https://t.me/yourtelegram" class="btn telegram" target="_blank">Telegram</a>
-  <a href="https://instagram.com/yourusername" class="btn instagram" target="_blank">Instagram</a>
-
+  <a href="https://t.me/ven1k1520" class="btn telegram" target="_blank">Telegram</a>
+<a href="https://instagram.com/damskiugodnik007" class="btn instagram" target="_blank">Instagram</a>
 </body>
 </html>
